# mmd-anim

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pr-target.yml  release.yml
bindings/python/: README.md
bindings/python/mmd_anim/: __init__.py  _abi.py  _live_reload.py  _model_descriptor.py  _runtime.py  _validation.py
bindings/python/tests/: test_abi_drift.py  test_live_reload.py  test_model_descriptor.py  test_model_descriptor_abi.py  test_runtime.py
crates/mmd-anim/: Cargo.toml
crates/mmd-anim-cli/: Cargo.toml  build.rs
crates/mmd-anim-cli/src/: golden.rs  main.rs  mmd_dumper_oracle.rs  schema.rs  support.rs
crates/mmd-anim-cli/src/commands/: bench.rs  compare.rs  export.rs  fbx.rs  fbx_skin_diff.rs  golden.rs  import.rs  mod.rs  oracle.rs  parse.rs  patch.rs  rig.rs  skin_check.rs  vmd_reduce.rs  vmd_sample.rs
crates/mmd-anim-cli/src/commands/golden/: tests.rs
crates/mmd-anim-cli/src/commands/vmd_reduce/: tests.rs
crates/mmd-anim-cli/src/main/: tests.rs
crates/mmd-anim-cli/tests/: exit_codes.rs  kotora_forearm_golden.rs
crates/mmd-anim-ffi/: Cargo.toml
crates/mmd-anim-ffi/abi/: model_descriptor_v1.json  python_abi_v2.json  python_abi_v3.json
crates/mmd-anim-ffi/csharp-smoke/: Program.cs  Smoke.csproj
crates/mmd-anim-ffi/include/: mmd_runtime.h
crates/mmd-anim-ffi/scripts/: smoke-csharp.ps1  smoke.ps1
crates/mmd-anim-ffi/src/: lib.rs  tests.rs
crates/mmd-anim-format/: Cargo.toml
crates/mmd-anim-format/fixtures/pmm/: PROVENANCE.md  ik_multi_bone_from_pmx_vmd.inspect.json  ik_multi_bone_from_pmx_vmd.pmm
crates/mmd-anim-format/fixtures/pmx/: ik_multi_axis_limit.pmx  ik_multi_axis_limit.pmx.json  model_descriptor_parity.pmx
crates/mmd-anim-format/fixtures/vmd/: ik_multi_bone_nondefault.vmd  simple_camera.vmd
crates/mmd-anim-format/src/: binary.rs  error.rs  format.rs  lib.rs  nmd.rs  normalize.rs  pmd.rs  pmm.rs  sjis.rs  vpd.rs  xfile.rs
crates/mmd-anim-format/src/fbx/: mod.rs  skin_diff.rs
crates/mmd-anim-format/src/pmx/: json_f32.rs  mod.rs
crates/mmd-anim-format/src/vmd/: mod.rs  reduced.rs
crates/mmd-anim-format/src/vmd/reduced/: tests.rs
crates/mmd-anim-physics-bullet/: Cargo.toml  build.rs
crates/mmd-anim-physics-bullet/native/: mmd_bullet_api.cpp  mmd_bullet_api.h
crates/mmd-anim-physics-bullet/src/: lib.rs  native.rs  pmx.rs  runtime.rs  test_support.rs
crates/mmd-anim-runtime/: Cargo.toml
crates/mmd-anim-runtime/src/: animation.rs  append_primitive.rs  flat_model.rs  ik_primitive.rs  lib.rs  model.rs  model_descriptor.rs  pose.rs  runtime.rs
crates/mmd-anim-runtime/src/reduce/: mod.rs  tests.rs
crates/mmd-anim-runtime/src/runtime/: ik.rs  morph.rs  physics.rs  tests.rs  world.rs
crates/mmd-anim-runtime/tests/: mmddumper_sample_basic.rs  runtime_model_descriptor.rs  synthetic_runtime_basic.rs
crates/mmd-anim-schema/: Cargo.toml
crates/mmd-anim-schema/src/: lib.rs  mmd_dumper_oracle.rs
crates/mmd-anim-schema/tests/: golden_ik_oracle.rs
crates/mmd-anim-wasm/: Cargo.toml
crates/mmd-anim-wasm/harness/: bench.mjs  build.mjs  package.json  smoke.mjs
crates/mmd-anim-wasm/src/: lib.rs
crates/mmd-anim/benches/: real_model_runtime.rs
crates/mmd-anim/src/: lib.rs
crates/mmd-anim/tests/: real_model_allocation.rs
docs/: README.ja.md  RELEASE.md  TESTING.md
scripts/: check-pmm-gui-smoke.ps1  dump_fbx_nodes.py  local-physics-release-gate.ps1  pmm-gui-smoke.ps1  scan-pmm-assets.ps1  validate_fbx.py
tools/: check_ffi_header_symbols.py  check_model_descriptor_abi.py  check_python_abi_drift.py  check_python_ffi_release.py  perf-bench-history.py
tools/golden-gate/: .gitignore  README.md  pyproject.toml
tools/golden-gate/src/golden_gate/: __init__.py  cli.py  compare.py  config.py  report.py  runner.py
tools/golden-gate/tests/: test_compare.py  test_config.py  test_numeric_gate.py  test_report.py  test_runner.py
