[workspace]
members = [
    "crates/mmd-anim",
    "crates/mmd-anim-runtime",
    "crates/mmd-anim-ffi",
    "crates/mmd-anim-wasm",
    "crates/mmd-anim-cli",
    "crates/mmd-anim-format",
    "crates/mmd-anim-physics-bullet",
]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.87"
license = "MIT"
repository = "https://github.com/yohawing/mmd-anim"
readme = "README.md"
keywords = ["mmd", "animation", "pmx", "vmd"]
categories = ["multimedia"]

[workspace.dependencies]
anyhow = "1.0.100"
glam = { version = "0.32.1", features = ["debug-glam-assert", "fast-math"] }
thiserror = "2.0.17"
rayon = "1.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wasm-bindgen = "0.2.105"
js-sys = "0.3"
encoding_rs = "0.8"
mmd-anim-runtime = { path = "crates/mmd-anim-runtime", version = "0.2.0" }
mmd-anim-format = { path = "crates/mmd-anim-format", version = "0.2.0" }
 
