[package]
name = "mmd-anim-physics-bullet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Optional Bullet physics backend for mmd-anim"

[features]
default = []
native = []
pmx-format = ["dep:mmd-anim-format"]

[dependencies]
mmd-anim-format = { workspace = true, optional = true }
thiserror.workspace = true

[build-dependencies]
cc = "1.2"

[dev-dependencies]
serde_json.workspace = true
