[package]
name = "mmd-anim-physics-bullet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Optional Bullet physics backend for mmd-anim"
include = [
    "Cargo.toml",
    "build.rs",
    "native/**",
    "src/**",
    "vendor/bullet3/LICENSE.txt",
    "vendor/bullet3/README.md",
    "vendor/bullet3/src/*.h",
    "vendor/bullet3/src/LinearMath/**",
    "vendor/bullet3/src/BulletCollision/**",
    "vendor/bullet3/src/BulletDynamics/**",
]

[features]
default = []
native = []
pmx-format = ["dep:mmd-anim-format"]
runtime = ["dep:mmd-anim-runtime"]

[dependencies]
glam.workspace = true
mmd-anim-format = { workspace = true, optional = true }
mmd-anim-runtime = { workspace = true, optional = true }
thiserror.workspace = true

[build-dependencies]
cc = "1.2"

[dev-dependencies]
serde_json.workspace = true
