[package]
name = "mmd-anim-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Renderer-independent MMD animation runtime core"

[dependencies]
glam.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rayon.workspace = true

