[package]
name = "mmd-anim-schema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared IR and trace schema for mmd-anim"

[dependencies]
glam.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
