[package]
name = "mmd-anim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust toolkit for MMD animation formats, runtime evaluation, and host integration"

[dependencies]
mmd-anim-format.workspace = true
mmd-anim-runtime.workspace = true
