[package]
name = "mmd-anim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust MMD animation runtime foundation for formats, evaluation, and host integration"

[features]
fbx = ["mmd-anim-format/fbx"]

[dependencies]
mmd-anim-format.workspace = true
mmd-anim-runtime.workspace = true

[dev-dependencies]
serde_json.workspace = true

[[bench]]
name = "real_model_runtime"
harness = false
